<resources>
    <string name="app_name">Weather outlook</string>
    <string name="str_updated">Обновлено</string>
    <string name="str_temperature">Температура</string>
    <string name="str_sunset">Закат</string>
    <string name="str_sunrise">Рассвет</string>
    <string name="str_humidity">Влажность</string>
    <string name="str_pressure">Давление</string>
    <string name="str_city_name">cityName</string>
    <string name="str_share_successfully">Запись размещена на стене вашей страницы</string>
    <string name="str_share_canceled">Действие отменено</string>
    <string name="appID">f45d2f1d63b29740ba59f4999f158e77</string>
    <string name="url_base_api">http://api.openweathermap.org/</string>
    <string name="url_vk_share_php">https://vk.com/share.php?url=</string>
    <string name="url_city">city/</string>
    <string name="url_http_ico">img/w/</string>
    <string name="temp_in_celsius">metric</string>
    <string name="temp_in_fahrenheit">imperial</string>
    <string name="dotPNG">.png</string>
    <string name="for_tests">Для \nтестов</string>
    <string name="str_VKshare">в VK</string>
    <string name="str_OKshare">в Ок</string>
    <string name="str_city_select">Выбрать город</string>
    <string name="label_authorization">Авторизация</string>
    <string name="label_cities_selector">Выберете город</string>
    <string name="str_share">Поделиться</string>

</resources>
