<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btn_cities_selector"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/str_city_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_group_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/str_share"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/btn_VKshare"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/str_VKshare"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/btn_OKshare"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/str_OKshare"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>